--- a/my-app/g2g/package.json
+++ b/my-app/g2g/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
